Closed Bug 367081 Opened 19 years ago Closed 18 years ago

NSResponder+Utils is never used

Categories

(Camino Graveyard :: General, defect)

PowerPC
macOS
defect
Not set
trivial

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: froodian, Assigned: froodian)

Details

(Keywords: fixed1.8.1.10)

Attachments

(3 files, 2 obsolete files)

Attached patch PatchSplinter Review
We import NSResponder+Utils in MainController and NSMenu+Utils, but neither of its two methods are ever used. If there's no compelling reason not to, it seems we can/should remove the NSResponder extension entirely. The included patch will require project patches to remove references to the files, and cvs removing on checkin.
Attachment #251598 - Flags: review?(bugzilla)
Simon, is there any particular reason to keep the NSResponder extension? When you checked it in, you said "New category on NSResponder to find the responder for a given action, and find an item of a particular class in the responder chain. Add method on NSMenu category to enable or disable all items (potentially recursing into submenus)."
Feel free to rip it out.
Comment on attachment 251598 [details] [diff] [review] Patch r=me, then. :)
Attachment #251598 - Flags: review?(bugzilla) → review+
Attachment #251598 - Flags: superreview?(stuart.morgan)
Comment on attachment 251598 [details] [diff] [review] Patch sr=smorgan (but there's probably not much point in landing this until there's a project patch)
Attachment #251598 - Flags: superreview?(stuart.morgan) → superreview+
By some miracle of $DEITY, the project patches here still apply.
Keywords: checkin-needed
Whiteboard: [needs checkin-ish]
Keywords: checkin-needed
Whiteboard: [needs new project patch post-bug 383469]
Whiteboard: [needs new project patch post-bug 383469] → [needs new project patches]
Comment on attachment 252656 [details] [diff] [review] trunk project patch ...not anymore
Attachment #252656 - Attachment is obsolete: true
This branch patch also "backs out" a lastKnownFileType/explicitFileType change that kreeger inadvertently added in rev 1.2.2.9 / bug 282002, so that line is now in sync both within the branch project's two targets and with the trunk project.
Landed on the trunk and MOZILLA_1_8_BRANCH.
Status: NEW → RESOLVED
Closed: 18 years ago
Keywords: fixed1.8.1.8
Resolution: --- → FIXED
Whiteboard: [needs new project patches]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: