Bug 367081 - NSResponder+Utils is never used. patch by Ian Leue <froodian@gmail.com> with project wrangling by yours truly, r=cl, sr=smorgan